--- a/render.yml
+++ b/render.yml
@@ -1,6 +1,6 @@
 services:
   - type: web
-    name: your-app
+    name: SentimentCare
     env: python
     buildCommand: apt-get update && apt-get install -y ffmpeg && pip install -r requirements.txt
     startCommand: python app.py
