--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-torch==2.1.0+cpu
-torchvision==0.16.0+cpu
-torchaudio==2.1.0+cpu
 --extra-index-url https://download.pytorch.org/whl/cpu
+
+torch
+torchvision
+torchaudio
 
 transformers
 safetensors
